# atlas-clean-code-april-2025

./: README.md
ThreadDemo/: main.cpp
VectorFillerDemo/: main.cpp
VectorFillerUebung_maerz/atlas/container/impl/builder/: VectorFactoryBuilder.h
VectorUebung/: CMakeLists.txt  main.cpp
VectorUebung/atlas/bootstrap/: Bootstrap.h
VectorUebung/atlas/client/: Client.h
VectorUebung/atlas/client/impl/: ClientImpl.h
VectorUebung/atlas/container/: AbstractVectorFactory.h  VectorFactory.h
VectorUebung/atlas/container/impl/decorator/: VectorFactoryBenchmarkDekorator.h
VectorUebung/atlas/container/impl/parallel/: VectorFactoryParallelImpl.h
VectorUebung/atlas/container/impl/sequential/: VectorFactorySequentialImpl.h
VectorUebung/atlas/generator/: IntGenerator.h
VectorUebung/atlas/generator/impl/random/: ClassicRandomGenerator.h
VectorUebung/atlas/time/: Stopwatch.h
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-gui/src/de/limago/: Fenster.java
tbbTest/: CMakeLists.txt  main.cpp
tbbTest/atlas/generator/: Generator.h
tbbTest/atlas/generator/impl/random/: MersenneTwisterNumberGenerator.h
